welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if(a!=b){
    if(b!=c){
      if(a!=c){
    		return 0
      }
    }
  }
  if(a==b){
    if(b==c){
    	return 20
    }
  }
    
  if((a==b) || (b==c) || (a==c)){
    return 10
  }
}